Update installation and config with published NPM package

--- a/examples/cline-config-local.json
+++ b/examples/cline-config-local.json
@@ -1,10 +1,7 @@
 {
     "mcpServers": {
         "macos-control": {
-            "command": "node",
-            "args": [
-                "/absolute/path/to/mcp-macos-control/index.cjs"
-            ]
+            "command": "mcp-macos-control"
         }
     }
 }
